[tool.poetry]
name = "reps-scheduler"
version = "0.1.0"
description = ""
authors = ["contactandy <contactandy@duck.com>"]
readme = "README.md"
packages = [{include = "reps_scheduler"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
