[tool.poetry]
name = "reps-scheduler"
version = "0.1.0"
description = ""
authors = ["contactandy <contactandy@duck.com>"]
readme = "README.md"
packages = [{include = "reps_scheduler"}]


[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.11"
ruff = "^0.0.247"
pylint = "^2.16.2"
black = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
select = ["E", "F", "I", "PL", "YTT", "RUF"]
